echo/3-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc
  labels:
    app: echo-server
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: echo-server
  ports:
  - name: response
    port: 80
    targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: echo-server-svc
            port:
              name: response
